--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     Coded and created with the help of internet
  <br>
   Done by- <b >Bhuvan N.R<b>
-<iframe style="display:none" width="560" height="315" src="https://www.youtube.com/embed/7VY191_NiHA?si=ALe9XaOnr0QkpxGo?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/7VY191_NiHA?si=ALe9XaOnr0QkpxGo?rel=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </center>
  </footer>
